<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wm_tabWidget_icon"
            android:scaleType="center"
            android:contentDescription="@string/content_description_tab_icon"
            android:src="@android:drawable/sym_def_app_icon"
            android:visibility="gone"
            android:layout_alignParentTop="false"
            android:layout_toStartOf="@+id/wm_tabWidget_title"
            android:adjustViewBounds="false"
            android:layout_toLeftOf="@+id/wm_tabWidget_title"
            android:layout_alignBottom="@+id/wm_tabWidget_title"
            android:layout_alignTop="@+id/wm_tabWidget_title"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wm_tabWidget_title"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:layout_alignParentTop="true"
            android:paddingTop="7dp"
            android:paddingBottom="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/wm_tabWidget_closeButton"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:scaleType="center"
            android:contentDescription="@string/content_description_close_button"
            android:layout_alignParentTop="false"
            android:layout_toRightOf="@+id/wm_tabWidget_title"
            android:layout_toEndOf="@+id/wm_tabWidget_title"
            android:layout_alignBottom="@+id/wm_tabWidget_title"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:id="@+id/wm_tabWidget_separator"
        android:src="#33b5e5"
        android:contentDescription="@string/content_description_separator"
        android:paddingLeft="1px"
        android:paddingRight="1px"/>
</LinearLayout>
